--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <head>
   <title> This is a title</title>
   </head>
-  <body>This is the body</body>
+  <body>This is the body
+  <h1> headline 1</h1>
+  </body>
     </html>
